--- a/app/views/system-shoply/sp-sidebar.html
+++ b/app/views/system-shoply/sp-sidebar.html
@@ -9,7 +9,7 @@
                     <li class="request" pagination-id="RequestEntity"
                   dir-paginate="record in records | orderBy:'-createdAt' | itemsPerPage: 4" style="border-top: 1px solid #07130d;border-bottom:1px solid #07130d;color:white;">
                         <a ng-click="showMarker()"style="color:white;"><i class="fa  fa-user"></i> 
-                        <span style="top: 5px;color:white;position: absolute;right: 20px;font-size: 10px;" class="nav-label">{{record.createdAt | moment}}</span> De {{record._user.full_name}}
+                        <span style="top:5px;color:#7a7a7a;position: absolute;right: 20px;font-size: 10px;" class="nav-label">{{record.createdAt | moment}}</span> De {{record.data.anonimo ? 'ANONIMO' : record._user.full_name}}
                         <p style="color:#999999;font-size: 10px;text-decoration: underline;"><span><strong>Motivo</strong></span> : {{record.data.incidencia || 'Sin Incidencia o Prioridad alta'}}</p>
 						
 						<span ng-show="record.data.status == 'En Camino'" class="label label-success">En Camino</span>
@@ -17,7 +17,7 @@
 						<span ng-show="!record.data.status || record.data.status == 'Pendiente'" class="label label-warning">Pendiente</span>
                         </a>
 
-	                    <div class="row" style="background-color: #191919;">
+	                    <div class="row">
 	                        <div style="padding: 5px 15px;position: relative;float: left;">
 	                        	<div class="col-lg-4 text-center">
 	                        		<button ng-click="OnRoad()" type="button" class="btn btn-success btn-xs"><i class="glyphicon glyphicon-road"></i>&nbsp;En camino</button>
@@ -31,7 +31,6 @@
 	                        </div>
 	                    </div> 
                     </li>
-
             </ul>
             <div class="col-lg-12">
               <dir-pagination-controls class="pull-right" pagination-id="RequestEntity"></dir-pagination-controls>
