--- a/app/views/login/login.html
+++ b/app/views/login/login.html
@@ -20,7 +20,7 @@
           <div class="wrap">
           <div class="row">
             <div class="col-lg-12">
-              <h3 class="text-dark">Iniciar Sesión.</h3> 
+              <h3 class="text-white">Iniciar Sesión.</h3> 
             </div>
           </div>
             <form name="loginForm" ng-controller="LoginCtrl" ng-init="load()" novalidate>
